fix(styles): Fix z-index of dialogs

--- a/src/styles/_evergreen.scss
+++ b/src/styles/_evergreen.scss
@@ -25,6 +25,6 @@
 
 // NOTE: Resort to global style + !important b/c evergreen-ui's <SelectMenu/>
 // doesn't expose any props for adding classes to it's dialog component 🤢
-div[evergreen-portal-container] div[role="dialog"] {
-  z-index: $z-index__menu-select !important;
+div[evergreen-portal-container] div {
+  z-index: $z-index__dialog !important;
 }
